--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - docker build -t uokereh/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run uokereh/react-test npm test -- --coverage
+  - docker run uokereh/react-test npm build -- --coverage
 
 deploy:
   provider: script
