added deployment scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ before_install:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker build -t uokereh/react-test -f ./client/Dockerfile.dev ./client
 
+script:
+  - docker run uokereh/react-test npm build
 
 deploy:
   provider: script
